prevent wrapping of fixed navbars

--- a/site/app/view/navbar.styl
+++ b/site/app/view/navbar.styl
@@ -1,6 +1,8 @@
-.nav
-  .fa:before
-    margin-right  0.5em
-  .maps
+.navbar-fixed-top
+  min-width 800px // prevent wrapping
+  .nav
     .fa:before
-      margin-left   0.5em
+      margin-right  0.5em
+    .maps
+      .fa:before
+        margin-left   0.5em
